# multiCLI-discord-base

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  LICENSE.ja.md  NOTICE.md  README.md  SECURITY.md  TAURI_MIGRATION_PLAN.md  codicodi-server.cmd  launch-browser.cmd  launch-browser.ps1  package-lock.json  package.json  start-multiCLI-discord-base.bat  start-multiCLI-discord-base.ps1
config/: agents.example.json  app-settings.example.json  cli-settings.example.json
docs/: MULTI_CLI_SPEC.md  SCHEDULE_PLAN.md  SPECIFICATION.md  agent-orchestrator-research-roadmap-20260427.md  discord-integration-status.md  discord-multiCLI-discord-base-test-plan.md  implemented-feature-checklist-20260503.md  legacy-runtime-audit.md
docs/handover/: codicodi_handover_2026-03-19.md  codicodi_handover_2026-03-20.md  codicodi_handover_2026-03-22.md  codicodi_handover_2026-04-01_workspace_reorg.md
docs/notes/: codicodi_developer_console_realistic_view_spec_2026-03-20.md  codicodi_discord_plugin_reuse_notes_2026-03-20.md
scripts/: install-tauri-build-tools.ps1  run-tauri-dev.ps1  start-server.cmd  start-server.js  test-multiCLI-discord-base-extended.mjs  test-multiCLI-discord-base.mjs  test-multicodi-extended.mjs  test-multicodi.mjs
server/mcp/: git-tools.json  registry.json  workspace-files.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  manifest.webmanifest  multiCLI-discord-base.css  multiCLI-discord-base.html  multiCLI-discord-base.js  multicodi.css  multicodi.html  multicodi.js  splash.html  styles.css  sw.js
(+34 files in other folders)
