[package]
name = "codex-discord-connected-display-tauri"
version = "0.1.0"
description = "Desktop wrapper for Codex Discord Connected Display"
authors = ["harunamitrader"]
license = "MIT"
repository = "https://github.com/harunamitrader/codicodi"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codex_discord_connected_display_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
